update npm libraries, re-run gulp